--- a/app/src/main/res/layout/content_crop_roistep4.xml
+++ b/app/src/main/res/layout/content_crop_roistep4.xml
@@ -201,7 +201,59 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_weight="1"
+                        android:layout_weight="0.6"
+                        >
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Number"
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_weight="0.6"
+                        >
+                        <EditText
+                            android:id="@+id/txt_crop_roi_step_4_casual_employee_number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="number"
+                            android:text="1"
+                            android:background="@drawable/input_shapes"
+                            android:textAlignment="textEnd"
+                            android:textSize="14sp" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_weight="0.4"
+                        >
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Employees"
+                            android:textColor="@color/textColor"
+                            android:textSize="12sp"
+                            />
+                    </LinearLayout>
+                </LinearLayout>
+                    <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="8dp"
+                    android:gravity="center_vertical"
+                    >
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_weight="0.6"
                         >
                         <TextView
                             android:layout_width="match_parent"
@@ -215,7 +267,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_weight="0.7"
+                        android:layout_weight="0.6"
                         >
                         <EditText
                             android:id="@+id/txt_crop_roi_step_4_casual_employee_cost"
@@ -230,7 +282,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:layout_weight="0.3"
+                            android:layout_weight="0.4"
                             >
                             <TextView
                                 android:layout_width="match_parent"
@@ -252,7 +304,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_weight="1"
+                        android:layout_weight="0.6"
                         >
                         <TextView
                             android:layout_width="match_parent"
@@ -266,7 +318,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_weight="0.7"
+                        android:layout_weight="0.6"
                         >
                         <EditText
                             android:id="@+id/txt_crop_roi_step_4_casual_employee_hours"
@@ -281,7 +333,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_weight="0.3"
+                        android:layout_weight="0.4"
                         >
                         <TextView
                             android:layout_width="match_parent"
@@ -302,7 +354,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_weight="1"
+                android:layout_weight="0.6"
                 >
                 <TextView
                     android:layout_width="match_parent"
@@ -316,7 +368,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_weight="0.7"
+                android:layout_weight="0.6"
                 >
                 <EditText
                     android:id="@+id/txt_crop_roi_step_4_casual_employee_weeks"
@@ -331,7 +383,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_weight="0.3"
+                android:layout_weight="0.4"
                 >
                 <TextView
                     android:layout_width="match_parent"
@@ -372,8 +424,9 @@
                             android:id="@+id/txt_crop_roi_step_4_casual_employee_total"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="number" android:text="0"
-                            android:background="@drawable/input_shapes"
+                            android:inputType="none"
+                            android:text="0"
+                            android:background="@drawable/input_shapes_grey_spinner"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -412,10 +465,10 @@
                         android:id="@+id/txt_crop_roi_step_4_total_labour_costs"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="number"
+                        android:inputType="none"
                         android:text="0"
-                        android:editable="false"
-                        android:background="@drawable/input_shapes"
+
+                        android:background="@drawable/input_shapes_grey_spinner"
                         android:textAlignment="textEnd"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -476,24 +529,7 @@
                 android:layout_margin="8dp"
                 android:gravity="center_vertical"
                 >
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_weight="1"
-                    >
-                    <Button
-                        android:id="@+id/txt_crop_roi_step_4_crop_btn_next"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/next"
-                        android:textAllCaps="false"
-                        style="@style/Button"
-                        android:textColor="@color/whiteColor"
-                        android:drawableRight="@drawable/arrow_right_white_24dp"
-                        android:textSize="14sp"
-                         />
-                </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -511,6 +547,24 @@
                         android:drawableLeft="@drawable/arrow_left_white_24dp"
                         android:textSize="14sp"
                          />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_weight="1"
+                    >
+                    <Button
+                        android:id="@+id/txt_crop_roi_step_4_crop_btn_next"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/next"
+                        android:textAllCaps="false"
+                        style="@style/Button"
+                        android:textColor="@color/whiteColor"
+                        android:drawableRight="@drawable/arrow_right_white_24dp"
+                        android:textSize="14sp"
+                        />
                 </LinearLayout>
 
             </LinearLayout>
