--- a/app/src/main/res/layout/crop_invoice_summary.xml
+++ b/app/src/main/res/layout/crop_invoice_summary.xml
@@ -58,6 +58,13 @@
                         android:text="Kampala"
                         android:textSize="12sp" android:textColor="@color/textColor"/>
                     <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" , "
+                        android:textSize="12sp"
+                        android:textColor="@color/textColor"/>
+                    <TextView
                         android:id="@+id/text_view_crop_invoice_estimate_user_country"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
