--- a/app/src/main/res/layout/crop_record_payment_invoice.xml
+++ b/app/src/main/res/layout/crop_record_payment_invoice.xml
@@ -38,7 +38,7 @@
                     android:layout_marginBottom="10dp">
 
                     <TextView
-                        android:id="@+id/crop_cost"
+                        android:id="@+id/txt_crop_record_payment_currency"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text="@string/ugx"
