--- a/app/src/main/res/layout/activity_crop_scouting_manager.xml
+++ b/app/src/main/res/layout/activity_crop_scouting_manager.xml
@@ -250,7 +250,7 @@
 
 
                         <TextView
-
+                            android:id="@+id/txt_crop_scouting_currency"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:padding="4dp"
