--- a/app/src/main/res/layout/activity_crops_manager.xml
+++ b/app/src/main/res/layout/activity_crops_manager.xml
@@ -249,10 +249,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Enter.."
+                android:hint="Select"
                 android:textSize="14sp"
                 android:inputType="none"
-                android:background="@drawable/input_shapes"
+                android:background="@drawable/input_shapes_grey_spinner"
                 />
 
             </LinearLayout>
