--- a/app/src/main/res/layout/crop_transplanting_list_card.xml
+++ b/app/src/main/res/layout/crop_transplanting_list_card.xml
@@ -58,6 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
+                android:paddingBottom="20dp"
                 android:background="@drawable/input_shapes_crops_card"
                 android:orientation="vertical">
 
