--- a/app/src/main/res/layout/activity_crops_manager.xml
+++ b/app/src/main/res/layout/activity_crops_manager.xml
@@ -43,19 +43,14 @@
                 android:layout_marginBottom="4dp"
                />
 
-                <LinearLayout
-                    android:background="@drawable/input_shapes_grey_spinner"
-                    android:padding="3.4dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                <Spinner
+                <AutoCompleteTextView
                     android:id="@+id/sp_crop_crop"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:entries="@array/crops_list"
-                    android:textColor="@color/colorPrimary"
+                    android:background="@drawable/input_shapes"
                     android:textSize="14sp" />
-                </LinearLayout>
+
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
