--- a/app/src/main/res/layout/content_crop_estimate_preview.xml
+++ b/app/src/main/res/layout/content_crop_estimate_preview.xml
@@ -501,6 +501,7 @@
                     android:layout_weight="0.5"
                     >
                         <TextView
+                            android:id="@+id/txt_view_crop_estimate_total_label"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="@string/total_ugx"
