--- a/app/src/main/res/layout/content_crop_inventory_spray_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_spray_manager.xml
@@ -380,8 +380,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="none"
-                        android:background="@drawable/input_shapes"
-                        android:hint="Enter.."
+                        android:background="@drawable/input_shapes_grey_spinner"
+                        android:hint="Select"
                         android:textSize="14sp" />
 
                 </LinearLayout>
