--- a/app/src/main/res/layout/crop_invoice_list_card.xml
+++ b/app/src/main/res/layout/crop_invoice_list_card.xml
@@ -45,8 +45,9 @@
                             android:id="@+id/txt_crop_product_card_quantitty"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginRight="10dp"
+                            android:paddingStart="1dp"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginEnd="10dp"
                             android:layout_marginTop="16dp"
                             android:text="UGX 300,000"
                             android:textColor="@color/estimates_card_currency_color"
