--- a/app/src/main/res/layout/activity_crop_cultivation_manager.xml
+++ b/app/src/main/res/layout/activity_crop_cultivation_manager.xml
@@ -39,10 +39,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:ems="10"
-                android:hint="Enter.."
+                android:hint="Select"
                 android:textSize="14sp"
                 android:inputType="none"
-                android:background="@drawable/input_shapes"
+                android:background="@drawable/input_shapes_grey_spinner"
 
 
                 />
