--- a/app/src/main/res/layout/activity_crop_spraying_manager.xml
+++ b/app/src/main/res/layout/activity_crop_spraying_manager.xml
@@ -39,10 +39,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Enter.."
+                android:hint="Select"
                 android:inputType="none"
                 android:textSize="14sp"
-                android:background="@drawable/input_shapes"
+                android:background="@drawable/input_shapes_grey_spinner"
 
 
                 />
@@ -75,9 +75,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Enter.."
+                android:hint="Select"
                 android:textSize="14sp"
-                android:background="@drawable/input_shapes"
+                android:background="@drawable/input_shapes_grey_spinner"
                 />
         </LinearLayout>
             <LinearLayout
@@ -99,9 +99,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Enter.."
+                android:hint="Select"
                 android:textSize="14sp"
-                android:background="@drawable/input_shapes"
+                android:background="@drawable/input_shapes_grey_spinner"
 
                 />
             </LinearLayout>
