--- a/app/src/main/res/layout/crop_harvest_list_card.xml
+++ b/app/src/main/res/layout/crop_harvest_list_card.xml
@@ -144,10 +144,10 @@
                     >
 
                     <TextView
-                        android:layout_width="221dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="38dp"
-                        android:layout_weight="0.2"
+                        android:layout_weight="0.4"
                         android:text="Quantity : "
                         android:textColor="@color/blackText"
                         android:textSize="14sp" />
@@ -155,7 +155,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_weight="0.3">
+                    android:layout_weight="0.6"
+                    android:layout_marginStart="6dp"
+                    >
                     <TextView
                         android:id="@+id/txt_view_crop_harvest_card_quantity"
                         android:layout_width="wrap_content"
@@ -244,7 +246,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="38dp"
-                        android:layout_weight="0.3"
+                        android:layout_weight="0.4"
                         android:text="Income Generated :"
                         android:textColor="@color/blackText" />
 
@@ -252,8 +254,8 @@
                         android:id="@+id/txt_view_crop_harvest_card_income_generated"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-
+                        android:layout_weight="0.6"
+                        android:layout_marginStart="6dp"
                         android:text="UGX 150,000"
                         android:textColor="#899889" />
                 </LinearLayout>
