--- a/app/src/main/res/layout/crop_invoice_summary.xml
+++ b/app/src/main/res/layout/crop_invoice_summary.xml
@@ -613,7 +613,7 @@
 
 
         <TextView
-
+            android:id="@+id/txt_crop_invoice_summary_notes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -621,7 +621,7 @@
             android:textColor="@color/textColor"
             android:text="Notes" />
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/txt_crop_invoice_summary_terms"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
