--- a/app/src/main/res/layout/content_crop_calculators.xml
+++ b/app/src/main/res/layout/content_crop_calculators.xml
@@ -7,9 +7,9 @@
     android:layout_height="match_parent"
     android:background="@color/light_gray"
 
-    android:paddingTop="200dp"
-    android:paddingStart="20dp"
-    android:paddingEnd="20dp"
+    android:paddingTop="180dp"
+    android:paddingStart="15dp"
+    android:paddingEnd="15dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.CropCalculatorsActivity"
     tools:showIn="@layout/activity_crop_calculators">
@@ -28,7 +28,9 @@
             android:id="@+id/layout_crop_calculators_revenue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="90dp"
+            android:layout_marginEnd="90dp"
             android:layout_weight="1"
             android:background="@color/whiteColor"
             android:onClick="openRevenueCalculator"
@@ -50,7 +52,7 @@
                 android:gravity="center"
 
                 android:paddingBottom="5dp"
-                android:text="REVENUE CALCULATOR"
+                android:text="REVENUE\nCALCULATOR"
                 android:textAllCaps="true"
                 android:textColor="#000000" />
 
@@ -94,7 +96,7 @@
                 android:gravity="center"
 
                 android:paddingBottom="5dp"
-                android:text="NUTRIENT REMOVAL"
+                android:text="NUTRIENT \n REMOVAL"
                 android:textAllCaps="true"
                 android:textColor="#000000" />
 
@@ -110,7 +112,7 @@
             android:onClick="openFertilizerCalculator"
             android:orientation="vertical">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
 
@@ -126,7 +128,7 @@
                 android:gravity="center"
 
                 android:paddingBottom="5dp"
-                android:text="FERTILIZER ESTIMATOR"
+                android:text="FERTILIZER\nESTIMATOR"
                 android:textAllCaps="true"
                 android:textColor="#000000" />
         </LinearLayout>
