--- a/app/src/main/res/drawable/rectangle_with_curve_border_drawable.xml
+++ b/app/src/main/res/drawable/rectangle_with_curve_border_drawable.xml
@@ -2,7 +2,7 @@
 <shape>
     <solid n1:color="@android:color/transparent"
       xmlns:n1="http://schemas.android.com/apk/res/android" />
-    <stroke n2:width="1.0dip" n2:color="@color/caldroid_gray"
+    <stroke n2:width="1.0dip" n2:color="@color/light_gray"
       xmlns:n2="http://schemas.android.com/apk/res/android" />
     <corners n3:radius="200.0dip"
       xmlns:n3="http://schemas.android.com/apk/res/android" />
