--- a/app/src/main/res/layout/activity_crop_contact_manager.xml
+++ b/app/src/main/res/layout/activity_crop_contact_manager.xml
@@ -32,7 +32,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/contact_type"
                     android:textColor="@color/textColor"
-                    android:textSize="16sp" />
+                    android:textSize="15sp"
+                    android:layout_marginBottom="4dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -59,7 +60,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/name"
                     android:textColor="@color/textColor"
-                    android:textSize="16sp"
+                    android:textSize="15sp"
+                    android:layout_marginBottom="4dp"
                     />
 
                 <EditText
@@ -94,7 +96,8 @@
                         android:layout_height="wrap_content"
                         android:text="@string/business_name"
                         android:textColor="@color/textColor"
-                        android:textSize="16sp"
+                        android:textSize="15sp"
+                        android:layout_marginBottom="4dp"
                         />
 
                     <EditText
@@ -121,7 +124,8 @@
                         android:layout_height="wrap_content"
                         android:text="@string/address"
                         android:textColor="@color/textColor"
-                        android:textSize="16sp" />
+                        android:textSize="15sp"
+                        android:layout_marginBottom="4dp"/>
 
                     <EditText
                         android:id="@+id/txt_crop_contact_address"
@@ -148,7 +152,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/phone_number"
                     android:textColor="@color/textColor"
-                    android:textSize="16sp"/>
+                    android:textSize="15sp"
+                    android:layout_marginBottom="4dp"/>
 
                 <EditText
                     android:id="@+id/txt_crop_contact_phone_number"
@@ -175,7 +180,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/email"
                     android:textColor="@color/textColor"
-                    android:textSize="16sp"/>
+                    android:textSize="15sp"
+                    android:layout_marginBottom="4dp"/>
 
                 <EditText
                     android:id="@+id/txt_crop_contact_email"
@@ -202,7 +208,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/website"
                     android:textColor="@color/textColor"
-                    android:textSize="16sp" />
+                    android:textSize="15sp"
+                    android:layout_marginBottom="4dp" />
 
                 <EditText
                     android:id="@+id/txt_crop_contact_website"
